src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> file_input_end
Rule 1     file_input_end -> file_input ENDMARKER
Rule 2     file_input -> file_input NEWLINE
Rule 3     file_input -> file_input stmt
Rule 4     file_input -> NEWLINE
Rule 5     file_input -> stmt
Rule 6     funcdef -> DEF NAME parameters COLON suite
Rule 7     funcdef -> DEF NAME parameters RETYPE type COLON suite
Rule 8     parameters -> LPAR RPAR
Rule 9     parameters -> LPAR varargslist RPAR
Rule 10    varargslist -> varargslist COMMA NAME COLON type
Rule 11    varargslist -> varargslist COMMA NAME
Rule 12    varargslist -> NAME COLON type
Rule 13    varargslist -> NAME
Rule 14    type -> STR
Rule 15    type -> INT
Rule 16    type -> FLOAT
Rule 17    type -> BOOL
Rule 18    type -> LIST
Rule 19    type -> NAME
Rule 20    stmt -> simple_stmt
Rule 21    stmt -> compound_stmt
Rule 22    simple_stmt -> small_stmts NEWLINE
Rule 23    simple_stmt -> small_stmts SEMICOLON NEWLINE
Rule 24    small_stmts -> small_stmts SEMICOLON small_stmt
Rule 25    small_stmts -> small_stmt
Rule 26    small_stmt -> flow_stmt
Rule 27    small_stmt -> expr_stmt
Rule 28    expr_stmt -> testlist ASSIGN testlist
Rule 29    expr_stmt -> atom list_index ASSIGN testlist
Rule 30    expr_stmt -> testlist COLON type ASSIGN testlist
Rule 31    expr_stmt -> testlist ASSIGN list_def
Rule 32    expr_stmt -> testlist COLON type ASSIGN list_def
Rule 33    expr_stmt -> testlist
Rule 34    list_def -> LBRA list_elem RBRA
Rule 35    list_elem -> list_elem COMMA test
Rule 36    list_elem -> list_elem COMMA list_def
Rule 37    list_elem -> test
Rule 38    list_elem -> list_def
Rule 39    flow_stmt -> return_stmt
Rule 40    flow_stmt -> continue_stmt
Rule 41    flow_stmt -> break_stmt
Rule 42    return_stmt -> RETURN testlist
Rule 43    return_stmt -> RETURN
Rule 44    continue_stmt -> CONTINUE
Rule 45    break_stmt -> BREAK
Rule 46    compound_stmt -> if_stmt
Rule 47    compound_stmt -> funcdef
Rule 48    compound_stmt -> while_loop
Rule 49    compound_stmt -> for_loop
Rule 50    compound_stmt -> struct_def
Rule 51    while_loop -> WHILE test COLON suite
Rule 52    for_loop -> FOR NAME IN range COLON suite
Rule 53    range -> string_range
Rule 54    range -> name_range
Rule 55    range -> list_def
Rule 56    range -> atom trailer
Rule 57    range -> atom list_index
Rule 58    string_range -> STRING
Rule 59    name_range -> NAME
Rule 60    struct_def -> STRUCT NAME COLON struct_body
Rule 61    struct_body -> NEWLINE INDENT struct_fields DEDENT
Rule 62    struct_fields -> struct_field struct_fields
Rule 63    struct_fields -> struct_field
Rule 64    struct_field -> NAME COLON type NEWLINE
Rule 65    struct_field -> NAME NEWLINE
Rule 66    par_test -> LPAR atom RPAR
Rule 67    par_test -> test
Rule 68    if_stmt -> IF par_test COLON suite
Rule 69    if_stmt -> IF par_test COLON suite ELSE COLON suite
Rule 70    if_stmt -> IF par_test COLON suite else_if_list
Rule 71    else_if_list -> ELIF par_test COLON suite
Rule 72    else_if_list -> ELIF par_test COLON suite ELSE COLON suite
Rule 73    else_if_list -> ELIF par_test COLON suite else_if_list
Rule 74    suite -> simple_stmt
Rule 75    suite -> NEWLINE INDENT stmts DEDENT
Rule 76    stmts -> stmts stmt
Rule 77    stmts -> stmt
Rule 78    comparison -> comparison PLUS comparison
Rule 79    comparison -> comparison MINUS comparison
Rule 80    comparison -> comparison MULT comparison
Rule 81    comparison -> comparison DIV comparison
Rule 82    comparison -> comparison MOD comparison
Rule 83    comparison -> comparison POTENCIA comparison
Rule 84    comparison -> MINUS comparison
Rule 85    comparison -> comparison NEQ comparison
Rule 86    comparison -> comparison EQ comparison
Rule 87    comparison -> comparison LT comparison
Rule 88    comparison -> comparison GT comparison
Rule 89    comparison -> comparison LEQ comparison
Rule 90    comparison -> comparison GEQ comparison
Rule 91    comparison -> comparison AND comparison
Rule 92    comparison -> comparison OR comparison
Rule 93    comparison -> NOT comparison
Rule 94    comparison -> LPAR comparison RPAR
Rule 95    comparison -> power
Rule 96    power -> atom
Rule 97    power -> atom trailer
Rule 98    power -> atom list_index
Rule 99    power -> method
Rule 100   power -> attribute
Rule 101   atom -> NAME
Rule 102   atom -> NUMBER
Rule 103   atom -> FLOAT
Rule 104   atom -> STRING
Rule 105   atom -> TRUE
Rule 106   atom -> FALSE
Rule 107   method -> NAME DOT NAME trailer
Rule 108   method -> LPAR atom RPAR DOT NAME trailer
Rule 109   attribute -> NAME DOT NAME
Rule 110   trailer -> LPAR arglist RPAR
Rule 111   trailer -> LPAR RPAR
Rule 112   list_index -> LBRA test RBRA
Rule 113   list_index -> list_index LBRA test RBRA
Rule 114   testlist -> testlist_multi COMMA
Rule 115   testlist -> testlist_multi
Rule 116   testlist_multi -> testlist_multi COMMA test
Rule 117   testlist_multi -> test
Rule 118   test -> comparison
Rule 119   arglist -> arglist COMMA argument
Rule 120   arglist -> argument
Rule 121   argument -> test

Terminals, with rules where they appear

AND                  : 91
ASSIGN               : 28 29 30 31 32
BOOL                 : 17
BREAK                : 45
COLON                : 6 7 10 12 30 32 51 52 60 64 68 69 69 70 71 72 72 73
COMMA                : 10 11 35 36 114 116 119
CONTINUE             : 44
DEDENT               : 61 75
DEF                  : 6 7
DIV                  : 81
DOT                  : 107 108 109
ELIF                 : 71 72 73
ELSE                 : 69 72
ENDMARKER            : 1
EQ                   : 86
FALSE                : 106
FLOAT                : 16 103
FOR                  : 52
GEQ                  : 90
GT                   : 88
IF                   : 68 69 70
IN                   : 52
INDENT               : 61 75
INT                  : 15
LBRA                 : 34 112 113
LEQ                  : 89
LIST                 : 18
LPAR                 : 8 9 66 94 108 110 111
LT                   : 87
MINUS                : 79 84
MOD                  : 82
MULT                 : 80
NAME                 : 6 7 10 11 12 13 19 52 59 60 64 65 101 107 107 108 109 109
NEQ                  : 85
NEWLINE              : 2 4 22 23 61 64 65 75
NOT                  : 93
NUMBER               : 102
OR                   : 92
PLUS                 : 78
POTENCIA             : 83
RBRA                 : 34 112 113
RETURN               : 42 43
RETYPE               : 7
RPAR                 : 8 9 66 94 108 110 111
SEMICOLON            : 23 24
STR                  : 14
STRING               : 58 104
STRUCT               : 60
TRUE                 : 105
WHILE                : 51
WS                   : 
error                : 

Nonterminals, with rules where they appear

arglist              : 110 119
argument             : 119 120
atom                 : 29 56 57 66 96 97 98 108
attribute            : 100
break_stmt           : 41
comparison           : 78 78 79 79 80 80 81 81 82 82 83 83 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 94 118
compound_stmt        : 21
continue_stmt        : 40
else_if_list         : 70 73
expr_stmt            : 27
file_input           : 1 2 3
file_input_end       : 0
flow_stmt            : 26
for_loop             : 49
funcdef              : 47
if_stmt              : 46
list_def             : 31 32 36 38 55
list_elem            : 34 35 36
list_index           : 29 57 98 113
method               : 99
name_range           : 54
par_test             : 68 69 70 71 72 73
parameters           : 6 7
power                : 95
range                : 52
return_stmt          : 39
simple_stmt          : 20 74
small_stmt           : 24 25
small_stmts          : 22 23 24
stmt                 : 3 5 76 77
stmts                : 75 76
string_range         : 53
struct_body          : 60
struct_def           : 50
struct_field         : 62 63
struct_fields        : 61 62
suite                : 6 7 51 52 68 69 69 70 71 72 72 73
test                 : 35 37 51 67 112 113 116 117 121
testlist             : 28 28 29 30 30 31 32 33 42
testlist_multi       : 114 115 116
trailer              : 56 97 107 108
type                 : 7 10 12 30 32 64
varargslist          : 9 10 11
while_loop           : 48

Parsing method: LALR

state 0

    (0) S' -> . file_input_end
    (1) file_input_end -> . file_input ENDMARKER
    (2) file_input -> . file_input NEWLINE
    (3) file_input -> . file_input stmt
    (4) file_input -> . NEWLINE
    (5) file_input -> . stmt
    (20) stmt -> . simple_stmt
    (21) stmt -> . compound_stmt
    (22) simple_stmt -> . small_stmts NEWLINE
    (23) simple_stmt -> . small_stmts SEMICOLON NEWLINE
    (46) compound_stmt -> . if_stmt
    (47) compound_stmt -> . funcdef
    (48) compound_stmt -> . while_loop
    (49) compound_stmt -> . for_loop
    (50) compound_stmt -> . struct_def
    (24) small_stmts -> . small_stmts SEMICOLON small_stmt
    (25) small_stmts -> . small_stmt
    (68) if_stmt -> . IF par_test COLON suite
    (69) if_stmt -> . IF par_test COLON suite ELSE COLON suite
    (70) if_stmt -> . IF par_test COLON suite else_if_list
    (6) funcdef -> . DEF NAME parameters COLON suite
    (7) funcdef -> . DEF NAME parameters RETYPE type COLON suite
    (51) while_loop -> . WHILE test COLON suite
    (52) for_loop -> . FOR NAME IN range COLON suite
    (60) struct_def -> . STRUCT NAME COLON struct_body
    (26) small_stmt -> . flow_stmt
    (27) small_stmt -> . expr_stmt
    (39) flow_stmt -> . return_stmt
    (40) flow_stmt -> . continue_stmt
    (41) flow_stmt -> . break_stmt
    (28) expr_stmt -> . testlist ASSIGN testlist
    (29) expr_stmt -> . atom list_index ASSIGN testlist
    (30) expr_stmt -> . testlist COLON type ASSIGN testlist
    (31) expr_stmt -> . testlist ASSIGN list_def
    (32) expr_stmt -> . testlist COLON type ASSIGN list_def
    (33) expr_stmt -> . testlist
    (42) return_stmt -> . RETURN testlist
    (43) return_stmt -> . RETURN
    (44) continue_stmt -> . CONTINUE
    (45) break_stmt -> . BREAK
    (114) testlist -> . testlist_multi COMMA
    (115) testlist -> . testlist_multi
    (101) atom -> . NAME
    (102) atom -> . NUMBER
    (103) atom -> . FLOAT
    (104) atom -> . STRING
    (105) atom -> . TRUE
    (106) atom -> . FALSE
    (116) testlist_multi -> . testlist_multi COMMA test
    (117) testlist_multi -> . test
    (118) test -> . comparison
    (78) comparison -> . comparison PLUS comparison
    (79) comparison -> . comparison MINUS comparison
    (80) comparison -> . comparison MULT comparison
    (81) comparison -> . comparison DIV comparison
    (82) comparison -> . comparison MOD comparison
    (83) comparison -> . comparison POTENCIA comparison
    (84) comparison -> . MINUS comparison
    (85) comparison -> . comparison NEQ comparison
    (86) comparison -> . comparison EQ comparison
    (87) comparison -> . comparison LT comparison
    (88) comparison -> . comparison GT comparison
    (89) comparison -> . comparison LEQ comparison
    (90) comparison -> . comparison GEQ comparison
    (91) comparison -> . comparison AND comparison
    (92) comparison -> . comparison OR comparison
    (93) comparison -> . NOT comparison
    (94) comparison -> . LPAR comparison RPAR
    (95) comparison -> . power
    (96) power -> . atom
    (97) power -> . atom trailer
    (98) power -> . atom list_index
    (99) power -> . method
    (100) power -> . attribute
    (107) method -> . NAME DOT NAME trailer
    (108) method -> . LPAR atom RPAR DOT NAME trailer
    (109) attribute -> . NAME DOT NAME

    NEWLINE         shift and go to state 3
    IF              shift and go to state 14
    DEF             shift and go to state 15
    WHILE           shift and go to state 17
    FOR             shift and go to state 19
    STRUCT          shift and go to state 20
    RETURN          shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    NAME            shift and go to state 16
    NUMBER          shift and go to state 32
    FLOAT           shift and go to state 33
    STRING          shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    LPAR            shift and go to state 40

    file_input_end                 shift and go to state 1
    file_input                     shift and go to state 2
    stmt                           shift and go to state 4
    simple_stmt                    shift and go to state 5
    compound_stmt                  shift and go to state 6
    small_stmts                    shift and go to state 7
    if_stmt                        shift and go to state 8
    funcdef                        shift and go to state 9
    while_loop                     shift and go to state 10
    for_loop                       shift and go to state 11
    struct_def                     shift and go to state 12
    small_stmt                     shift and go to state 13
    test                           shift and go to state 18
    flow_stmt                      shift and go to state 21
    expr_stmt                      shift and go to state 22
    return_stmt                    shift and go to state 23
    continue_stmt                  shift and go to state 24
    break_stmt                     shift and go to state 25
    testlist                       shift and go to state 26
    atom                           shift and go to state 27
    testlist_multi                 shift and go to state 31
    comparison                     shift and go to state 37
    power                          shift and go to state 41
    method                         shift and go to state 42
    attribute                      shift and go to state 43

state 1

    (0) S' -> file_input_end .



state 2

    (1) file_input_end -> file_input . ENDMARKER
    (2) file_input -> file_input . NEWLINE
    (3) file_input -> file_input . stmt
    (20) stmt -> . simple_stmt
    (21) stmt -> . compound_stmt
    (22) simple_stmt -> . small_stmts NEWLINE
    (23) simple_stmt -> . small_stmts SEMICOLON NEWLINE
    (46) compound_stmt -> . if_stmt
    (47) compound_stmt -> . funcdef
    (48) compound_stmt -> . while_loop
    (49) compound_stmt -> . for_loop
    (50) compound_stmt -> . struct_def
    (24) small_stmts -> . small_stmts SEMICOLON small_stmt
    (25) small_stmts -> . small_stmt
    (68) if_stmt -> . IF par_test COLON suite
    (69) if_stmt -> . IF par_test COLON suite ELSE COLON suite
    (70) if_stmt -> . IF par_test COLON suite else_if_list
    (6) funcdef -> . DEF NAME parameters COLON suite
    (7) funcdef -> . DEF NAME parameters RETYPE type COLON suite
    (51) while_loop -> . WHILE test COLON suite
    (52) for_loop -> . FOR NAME IN range COLON suite
    (60) struct_def -> . STRUCT NAME COLON struct_body
    (26) small_stmt -> . flow_stmt
    (27) small_stmt -> . expr_stmt
    (39) flow_stmt -> . return_stmt
    (40) flow_stmt -> . continue_stmt
    (41) flow_stmt -> . break_stmt
    (28) expr_stmt -> . testlist ASSIGN testlist
    (29) expr_stmt -> . atom list_index ASSIGN testlist
    (30) expr_stmt -> . testlist COLON type ASSIGN testlist
    (31) expr_stmt -> . testlist ASSIGN list_def
    (32) expr_stmt -> . testlist COLON type ASSIGN list_def
    (33) expr_stmt -> . testlist
    (42) return_stmt -> . RETURN testlist
    (43) return_stmt -> . RETURN
    (44) continue_stmt -> . CONTINUE
    (45) break_stmt -> . BREAK
    (114) testlist -> . testlist_multi COMMA
    (115) testlist -> . testlist_multi
    (101) atom -> . NAME
    (102) atom -> . NUMBER
    (103) atom -> . FLOAT
    (104) atom -> . STRING
    (105) atom -> . TRUE
    (106) atom -> . FALSE
    (116) testlist_multi -> . testlist_multi COMMA test
    (117) testlist_multi -> . test
    (118) test -> . comparison
    (78) comparison -> . comparison PLUS comparison
    (79) comparison -> . comparison MINUS comparison
    (80) comparison -> . comparison MULT comparison
    (81) comparison -> . comparison DIV comparison
    (82) comparison -> . comparison MOD comparison
    (83) comparison -> . comparison POTENCIA comparison
    (84) comparison -> . MINUS comparison
    (85) comparison -> . comparison NEQ comparison
    (86) comparison -> . comparison EQ comparison
    (87) comparison -> . comparison LT comparison
    (88) comparison -> . comparison GT comparison
    (89) comparison -> . comparison LEQ comparison
    (90) comparison -> . comparison GEQ comparison
    (91) comparison -> . comparison AND comparison
    (92) comparison -> . comparison OR comparison
    (93) comparison -> . NOT comparison
    (94) comparison -> . LPAR comparison RPAR
    (95) comparison -> . power
    (96) power -> . atom
    (97) power -> . atom trailer
    (98) power -> . atom list_index
    (99) power -> . method
    (100) power -> . attribute
    (107) method -> . NAME DOT NAME trailer
    (108) method -> . LPAR atom RPAR DOT NAME trailer
    (109) attribute -> . NAME DOT NAME

    ENDMARKER       shift and go to state 44
    NEWLINE         shift and go to state 45
    IF              shift and go to state 14
    DEF             shift and go to state 15
    WHILE           shift and go to state 17
    FOR             shift and go to state 19
    STRUCT          shift and go to state 20
    RETURN          shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    NAME            shift and go to state 16
    NUMBER          shift and go to state 32
    FLOAT           shift and go to state 33
    STRING          shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    LPAR            shift and go to state 40

    stmt                           shift and go to state 46
    simple_stmt                    shift and go to state 5
    compound_stmt                  shift and go to state 6
    small_stmts                    shift and go to state 7
    if_stmt                        shift and go to state 8
    funcdef                        shift and go to state 9
    while_loop                     shift and go to state 10
    for_loop                       shift and go to state 11
    struct_def                     shift and go to state 12
    small_stmt                     shift and go to state 13
    test                           shift and go to state 18
    flow_stmt                      shift and go to state 21
    expr_stmt                      shift and go to state 22
    return_stmt                    shift and go to state 23
    continue_stmt                  shift and go to state 24
    break_stmt                     shift and go to state 25
    testlist                       shift and go to state 26
    atom                           shift and go to state 27
    testlist_multi                 shift and go to state 31
    comparison                     shift and go to state 37
    power                          shift and go to state 41
    method                         shift and go to state 42
    attribute                      shift and go to state 43

state 3

    (4) file_input -> NEWLINE .

    ENDMARKER       reduce using rule 4 (file_input -> NEWLINE .)
    NEWLINE         reduce using rule 4 (file_input -> NEWLINE .)
    IF              reduce using rule 4 (file_input -> NEWLINE .)
    DEF             reduce using rule 4 (file_input -> NEWLINE .)
    WHILE           reduce using rule 4 (file_input -> NEWLINE .)
    FOR             reduce using rule 4 (file_input -> NEWLINE .)
    STRUCT          reduce using rule 4 (file_input -> NEWLINE .)
    RETURN          reduce using rule 4 (file_input -> NEWLINE .)
    CONTINUE        reduce using rule 4 (file_input -> NEWLINE .)
    BREAK           reduce using rule 4 (file_input -> NEWLINE .)
    NAME            reduce using rule 4 (file_input -> NEWLINE .)
    NUMBER          reduce using rule 4 (file_input -> NEWLINE .)
    FLOAT           reduce using rule 4 (file_input -> NEWLINE .)
    STRING          reduce using rule 4 (file_input -> NEWLINE .)
    TRUE            reduce using rule 4 (file_input -> NEWLINE .)
    FALSE           reduce using rule 4 (file_input -> NEWLINE .)
    MINUS           reduce using rule 4 (file_input -> NEWLINE .)
    NOT             reduce using rule 4 (file_input -> NEWLINE .)
    LPAR            reduce using rule 4 (file_input -> NEWLINE .)


state 4

    (5) file_input -> stmt .

    ENDMARKER       reduce using rule 5 (file_input -> stmt .)
    NEWLINE         reduce using rule 5 (file_input -> stmt .)
    IF              reduce using rule 5 (file_input -> stmt .)
    DEF             reduce using rule 5 (file_input -> stmt .)
    WHILE           reduce using rule 5 (file_input -> stmt .)
    FOR             reduce using rule 5 (file_input -> stmt .)
    STRUCT          reduce using rule 5 (file_input -> stmt .)
    RETURN          reduce using rule 5 (file_input -> stmt .)
    CONTINUE        reduce using rule 5 (file_input -> stmt .)
    BREAK           reduce using rule 5 (file_input -> stmt .)
    NAME            reduce using rule 5 (file_input -> stmt .)
    NUMBER          reduce using rule 5 (file_input -> stmt .)
    FLOAT           reduce using rule 5 (file_input -> stmt .)
    STRING          reduce using rule 5 (file_input -> stmt .)
    TRUE            reduce using rule 5 (file_input -> stmt .)
    FALSE           reduce using rule 5 (file_input -> stmt .)
    MINUS           reduce using rule 5 (file_input -> stmt .)
    NOT             reduce using rule 5 (file_input -> stmt .)
    LPAR            reduce using rule 5 (file_input -> stmt .)


state 5

    (20) stmt -> simple_stmt .

    ENDMARKER       reduce using rule 20 (stmt -> simple_stmt .)
    NEWLINE         reduce using rule 20 (stmt -> simple_stmt .)
    IF              reduce using rule 20 (stmt -> simple_stmt .)
    DEF             reduce using rule 20 (stmt -> simple_stmt .)
    WHILE           reduce using rule 20 (stmt -> simple_stmt .)
    FOR             reduce using rule 20 (stmt -> simple_stmt .)
    STRUCT          reduce using rule 20 (stmt -> simple_stmt .)
    RETURN          reduce using rule 20 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 20 (stmt -> simple_stmt .)
    BREAK           reduce using rule 20 (stmt -> simple_stmt .)
    NAME            reduce using rule 20 (stmt -> simple_stmt .)
    NUMBER          reduce using rule 20 (stmt -> simple_stmt .)
    FLOAT           reduce using rule 20 (stmt -> simple_stmt .)
    STRING          reduce using rule 20 (stmt -> simple_stmt .)
    TRUE            reduce using rule 20 (stmt -> simple_stmt .)
    FALSE           reduce using rule 20 (stmt -> simple_stmt .)
    MINUS           reduce using rule 20 (stmt -> simple_stmt .)
    NOT             reduce using rule 20 (stmt -> simple_stmt .)
    LPAR            reduce using rule 20 (stmt -> simple_stmt .)
    DEDENT          reduce using rule 20 (stmt -> simple_stmt .)


state 6

    (21) stmt -> compound_stmt .

    ENDMARKER       reduce using rule 21 (stmt -> compound_stmt .)
    NEWLINE         reduce using rule 21 (stmt -> compound_stmt .)
    IF              reduce using rule 21 (stmt -> compound_stmt .)
    DEF             reduce using rule 21 (stmt -> compound_stmt .)
    WHILE           reduce using rule 21 (stmt -> compound_stmt .)
    FOR             reduce using rule 21 (stmt -> compound_stmt .)
    STRUCT          reduce using rule 21 (stmt -> compound_stmt .)
    RETURN          reduce using rule 21 (stmt -> compound_stmt .)
    CONTINUE        reduce using rule 21 (stmt -> compound_stmt .)
    BREAK           reduce using rule 21 (stmt -> compound_stmt .)
    NAME            reduce using rule 21 (stmt -> compound_stmt .)
    NUMBER          reduce using rule 21 (stmt -> compound_stmt .)
    FLOAT           reduce using rule 21 (stmt -> compound_stmt .)
    STRING          reduce using rule 21 (stmt -> compound_stmt .)
    TRUE            reduce using rule 21 (stmt -> compound_stmt .)
    FALSE           reduce using rule 21 (stmt -> compound_stmt .)
    MINUS           reduce using rule 21 (stmt -> compound_stmt .)
    NOT             reduce using rule 21 (stmt -> compound_stmt .)
    LPAR            reduce using rule 21 (stmt -> compound_stmt .)
    DEDENT          reduce using rule 21 (stmt -> compound_stmt .)


state 7

    (22) simple_stmt -> small_stmts . NEWLINE
    (23) simple_stmt -> small_stmts . SEMICOLON NEWLINE
    (24) small_stmts -> small_stmts . SEMICOLON small_stmt

    NEWLINE         shift and go to state 47
    SEMICOLON       shift and go to state 48


state 8

    (46) compound_stmt -> if_stmt .

    ENDMARKER       reduce using rule 46 (compound_stmt -> if_stmt .)
    NEWLINE         reduce using rule 46 (compound_stmt -> if_stmt .)
    IF              reduce using rule 46 (compound_stmt -> if_stmt .)
    DEF             reduce using rule 46 (compound_stmt -> if_stmt .)
    WHILE           reduce using rule 46 (compound_stmt -> if_stmt .)
    FOR             reduce using rule 46 (compound_stmt -> if_stmt .)
    STRUCT          reduce using rule 46 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 46 (compound_stmt -> if_stmt .)
    CONTINUE        reduce using rule 46 (compound_stmt -> if_stmt .)
    BREAK           reduce using rule 46 (compound_stmt -> if_stmt .)
    NAME            reduce using rule 46 (compound_stmt -> if_stmt .)
    NUMBER          reduce using rule 46 (compound_stmt -> if_stmt .)
    FLOAT           reduce using rule 46 (compound_stmt -> if_stmt .)
    STRING          reduce using rule 46 (compound_stmt -> if_stmt .)
    TRUE            reduce using rule 46 (compound_stmt -> if_stmt .)
    FALSE           reduce using rule 46 (compound_stmt -> if_stmt .)
    MINUS           reduce using rule 46 (compound_stmt -> if_stmt .)
    NOT             reduce using rule 46 (compound_stmt -> if_stmt .)
    LPAR            reduce using rule 46 (compound_stmt -> if_stmt .)
    DEDENT          reduce using rule 46 (compound_stmt -> if_stmt .)


state 9

    (47) compound_stmt -> funcdef .

    ENDMARKER       reduce using rule 47 (compound_stmt -> funcdef .)
    NEWLINE         reduce using rule 47 (compound_stmt -> funcdef .)
    IF              reduce using rule 47 (compound_stmt -> funcdef .)
    DEF             reduce using rule 47 (compound_stmt -> funcdef .)
    WHILE           reduce using rule 47 (compound_stmt -> funcdef .)
    FOR             reduce using rule 47 (compound_stmt -> funcdef .)
    STRUCT          reduce using rule 47 (compound_stmt -> funcdef .)
    RETURN          reduce using rule 47 (compound_stmt -> funcdef .)
    CONTINUE        reduce using rule 47 (compound_stmt -> funcdef .)
    BREAK           reduce using rule 47 (compound_stmt -> funcdef .)
    NAME            reduce using rule 47 (compound_stmt -> funcdef .)
    NUMBER          reduce using rule 47 (compound_stmt -> funcdef .)
    FLOAT           reduce using rule 47 (compound_stmt -> funcdef .)
    STRING          reduce using rule 47 (compound_stmt -> funcdef .)
    TRUE            reduce using rule 47 (compound_stmt -> funcdef .)
    FALSE           reduce using rule 47 (compound_stmt -> funcdef .)
    MINUS           reduce using rule 47 (compound_stmt -> funcdef .)
    NOT             reduce using rule 47 (compound_stmt -> funcdef .)
    LPAR            reduce using rule 47 (compound_stmt -> funcdef .)
    DEDENT          reduce using rule 47 (compound_stmt -> funcdef .)


state 10

    (48) compound_stmt -> while_loop .

    ENDMARKER       reduce using rule 48 (compound_stmt -> while_loop .)
    NEWLINE         reduce using rule 48 (compound_stmt -> while_loop .)
    IF              reduce using rule 48 (compound_stmt -> while_loop .)
    DEF             reduce using rule 48 (compound_stmt -> while_loop .)
    WHILE           reduce using rule 48 (compound_stmt -> while_loop .)
    FOR             reduce using rule 48 (compound_stmt -> while_loop .)
    STRUCT          reduce using rule 48 (compound_stmt -> while_loop .)
    RETURN          reduce using rule 48 (compound_stmt -> while_loop .)
    CONTINUE        reduce using rule 48 (compound_stmt -> while_loop .)
    BREAK           reduce using rule 48 (compound_stmt -> while_loop .)
    NAME            reduce using rule 48 (compound_stmt -> while_loop .)
    NUMBER          reduce using rule 48 (compound_stmt -> while_loop .)
    FLOAT           reduce using rule 48 (compound_stmt -> while_loop .)
    STRING          reduce using rule 48 (compound_stmt -> while_loop .)
    TRUE            reduce using rule 48 (compound_stmt -> while_loop .)
    FALSE           reduce using rule 48 (compound_stmt -> while_loop .)
    MINUS           reduce using rule 48 (compound_stmt -> while_loop .)
    NOT             reduce using rule 48 (compound_stmt -> while_loop .)
    LPAR            reduce using rule 48 (compound_stmt -> while_loop .)
    DEDENT          reduce using rule 48 (compound_stmt -> while_loop .)


state 11

    (49) compound_stmt -> for_loop .

    ENDMARKER       reduce using rule 49 (compound_stmt -> for_loop .)
    NEWLINE         reduce using rule 49 (compound_stmt -> for_loop .)
    IF              reduce using rule 49 (compound_stmt -> for_loop .)
    DEF             reduce using rule 49 (compound_stmt -> for_loop .)
    WHILE           reduce using rule 49 (compound_stmt -> for_loop .)
    FOR             reduce using rule 49 (compound_stmt -> for_loop .)
    STRUCT          reduce using rule 49 (compound_stmt -> for_loop .)
    RETURN          reduce using rule 49 (compound_stmt -> for_loop .)
    CONTINUE        reduce using rule 49 (compound_stmt -> for_loop .)
    BREAK           reduce using rule 49 (compound_stmt -> for_loop .)
    NAME            reduce using rule 49 (compound_stmt -> for_loop .)
    NUMBER          reduce using rule 49 (compound_stmt -> for_loop .)
    FLOAT           reduce using rule 49 (compound_stmt -> for_loop .)
    STRING          reduce using rule 49 (compound_stmt -> for_loop .)
    TRUE            reduce using rule 49 (compound_stmt -> for_loop .)
    FALSE           reduce using rule 49 (compound_stmt -> for_loop .)
    MINUS           reduce using rule 49 (compound_stmt -> for_loop .)
    NOT             reduce using rule 49 (compound_stmt -> for_loop .)
    LPAR            reduce using rule 49 (compound_stmt -> for_loop .)
    DEDENT          reduce using rule 49 (compound_stmt -> for_loop .)


state 12

    (50) compound_stmt -> struct_def .

    ENDMARKER       reduce using rule 50 (compound_stmt -> struct_def .)
    NEWLINE         reduce using rule 50 (compound_stmt -> struct_def .)
    IF              reduce using rule 50 (compound_stmt -> struct_def .)
    DEF             reduce using rule 50 (compound_stmt -> struct_def .)
    WHILE           reduce using rule 50 (compound_stmt -> struct_def .)
    FOR             reduce using rule 50 (compound_stmt -> struct_def .)
    STRUCT          reduce using rule 50 (compound_stmt -> struct_def .)
    RETURN          reduce using rule 50 (compound_stmt -> struct_def .)
    CONTINUE        reduce using rule 50 (compound_stmt -> struct_def .)
    BREAK           reduce using rule 50 (compound_stmt -> struct_def .)
    NAME            reduce using rule 50 (compound_stmt -> struct_def .)
    NUMBER          reduce using rule 50 (compound_stmt -> struct_def .)
    FLOAT           reduce using rule 50 (compound_stmt -> struct_def .)
    STRING          reduce using rule 50 (compound_stmt -> struct_def .)
    TRUE            reduce using rule 50 (compound_stmt -> struct_def .)
    FALSE           reduce using rule 50 (compound_stmt -> struct_def .)
    MINUS           reduce using rule 50 (compound_stmt -> struct_def .)
    NOT             reduce using rule 50 (compound_stmt -> struct_def .)
    LPAR            reduce using rule 50 (compound_stmt -> struct_def .)
    DEDENT          reduce using rule 50 (compound_stmt -> struct_def .)


state 13

    (25) small_stmts -> small_stmt .

    NEWLINE         reduce using rule 25 (small_stmts -> small_stmt .)
    SEMICOLON       reduce using rule 25 (small_stmts -> small_stmt .)


state 14

    (68) if_stmt -> IF . par_test COLON suite
    (69) if_stmt -> IF . par_test COLON suite ELSE COLON suite
    (70) if_stmt -> IF . par_test COLON suite else_if_list
    (66) par_test -> . LPAR atom RPAR
    (67) par_test -> . test
    (118) test -> . comparison
    (78) comparison -> . comparison PLUS comparison
    (79) comparison -> . comparison MINUS comparison
    (80) comparison -> . comparison MULT comparison
    (81) comparison -> . comparison DIV comparison
    (82) comparison -> . comparison MOD comparison
    (83) comparison -> . comparison POTENCIA comparison
    (84) comparison -> . MINUS comparison
    (85) comparison -> . comparison NEQ comparison
    (86) comparison -> . comparison EQ comparison
    (87) comparison -> . comparison LT comparison
    (88) comparison -> . comparison GT comparison
    (89) comparison -> . comparison LEQ comparison
    (90) comparison -> . comparison GEQ comparison
    (91) comparison -> . comparison AND comparison
    (92) comparison -> . comparison OR comparison
    (93) comparison -> . NOT comparison
    (94) comparison -> . LPAR comparison RPAR
    (95) comparison -> . power
    (96) power -> . atom
    (97) power -> . atom trailer
    (98) power -> . atom list_index
    (99) power -> . method
    (100) power -> . attribute
    (101) atom -> . NAME
    (102) atom -> . NUMBER
    (103) atom -> . FLOAT
    (104) atom -> . STRING
    (105) atom -> . TRUE
    (106) atom -> . FALSE
    (107) method -> . NAME DOT NAME trailer
    (108) method -> . LPAR atom RPAR DOT NAME trailer
    (109) attribute -> . NAME DOT NAME
